# fast-api

./: main.py  pyproject.toml
api/: courses.py  users.py
db/: db_setup.py
db/models/: user.py
